# OpenAI-Agents-SDK

./: Readme.md
Gauge/: Learning_Path.md  Learning_Path.txt  Readme.md  Roadmap.txt
Gauge/00 - 2 - Python Syntax Dataclasses/: 3 - Python_Basic_Generics.ipynb  7 - Python_Decorators_101.ipynb
Gauge/00 - Pyhton Syntax Dataclasses/: 1 - Python_Syntax_Dataclasses.ipynb  2 - Python_Dataclasses_Example.ipynb  4 - Python_Advance_Generic.ipynb
Gauge/00 - Python Syntax Dataclasses/: 5 - Python_Callables.ipynb  6 - Python_Private_And_Protected_Attributes.ipynb
Gauge/01 - Swarm/: Readme.md
Gauge/03 - Chainlit/chainlit/: pyproject.toml
Gauge/03 - Chainlit/chainlit/src/chainlit/: __init__.py
Gauge/03 - Levels/: Readme.md
Gauge/04 - Execution/: Readme.md
Gauge/04 - Hello Agent/: Readme.md
Gauge/04 - Levels/: Readme.md
Gauge/07 - OpenRouter/: OpenRouter_OpenAI_Agents_SDK.ipynb
Gauge/07 - Streaming/: Readme.md
Gauge/08 - Streaming/: Streaming_OpenAI_Agents_SDK.ipynb
Gauge/09 - 1 - Hosted Tool/: Hosted_Tools_OpenAI_Agents_SDK.ipynb  Readme.md
Gauge/09 - 2 - Function Tool/: Function_Tools_OpenAI_Agents_SDK.ipynb
Gauge/09 - 3 - Agents As Tool/: Agents_As_Tools_OpenAI_Agents_SDK_ipyn.ipynb
Gauge/10 - Context/: Context_OpenAI_Agents_SDK.ipynb
Gauge/11 - Structured Outputs/: Readme.md  structured_output.ipynb
Gauge/12 - HandOffs/: Readme.md  handoffs.ipynb
Gauge/13 - Guardrails/: GuardRails_OpenAI_Agents_SDK.ipynb  Readme.md
Grind/01 - Intro/: Readme.md
Grind/Customer Support Agent System/: Customer_Support_Agent_System.ipynb
(+32 files in other folders)
